--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,10 @@
 
 version: 0.2
 phases:
+
+install:
+    runtime-versions:
+      java: openjdk8
   pre_build:
     commands:
     - echo "Entered the pre-build phase"
